fix: left and right container aligned

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -13,29 +13,17 @@ body {
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
-  /* justify-content: left; */
-  align-items: center;
-  padding :8px 16px;
+  justify-content: space-between;
+  padding :8px;
 }
 
-/* .left{
-  display: flex;
-
-} */
-
-.links{
-  display: flex;
-  flex-direction: row;
-  
-  
-}
-
-.right
+.left, .right
 {
   display: flex;
-  margin-left: auto;
   align-items: center;
+  gap: 16px;
 }
+
 .profile-image {
   background: rebeccapurple;
   box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
@@ -57,20 +45,20 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
-  /* margin:auto; */
-  border: 8px solid #fff;
-  /* border-radius: 30% */
 }
 
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
-  padding: 4px;
   
 }
 
 ul {
   list-style-type: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
 }
 
